--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ go:
   - tip
 
 install:
-  - go get github.com/google/badwolf/...
   - go get github.com/boltdb/bolt
+  - go get github.com/google/badwolf/...
+  - go get github.com/peterh/liner
   - go get golang.org/x/net/context
 
 script:
